--- a/src/style/messenger/_messenger.scss
+++ b/src/style/messenger/_messenger.scss
@@ -79,7 +79,6 @@
     height: 72%;
     // border: 1px solid blue;
     .messenger-chat-item {
-      display: flex;
       margin: 15px 20px;
       //   border: 1px solid red;
       width: 500px;
@@ -100,17 +99,24 @@
 
   .chat-sender {
     float: right;
+    display: grid;
+    grid-template-columns: auto 60px;
+    justify-items: right;
     p {
       background-color: $sideNavBg;
       color: white;
+      width: fit-content;
     }
   }
 
   .chat-receiver {
     float: left;
+    display: grid;
+    grid-template-columns: 60px auto;
     p {
       background-color: rgb(255, 255, 255);
       color: rgb(0, 0, 0);
+      width: fit-content;
     }
   }
 
